[gd_scene load_steps=7 format=2]

[ext_resource path="res://juego/interfaz/ContenedorVidas.tscn" type="PackedScene" id=1]
[ext_resource path="res://juego/interfaz/ContenedorLLaves.tscn" type="PackedScene" id=2]
[ext_resource path="res://juego/interfaz/ContenedorMonedasPlata.tscn" type="PackedScene" id=3]
[ext_resource path="res://juego/interfaz/ContenedorMonedasOro.tscn" type="PackedScene" id=4]
[ext_resource path="res://juego/interfaz/ContenedorMonedasBronce.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego/interfaz/HUD.gd" type="Script" id=6]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -1.0
margin_right = 4.0
margin_bottom = -1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 46.0, 188.0 ],
"_edit_vertical_guides_": [ 1093.0 ]
}

[node name="ContenedorVidas" parent="." instance=ExtResource( 1 )]
margin_top = 47.0
margin_bottom = 112.0

[node name="ContenedorLLaves" parent="." instance=ExtResource( 2 )]
margin_left = 2.0
margin_top = 122.0
margin_right = 167.0
margin_bottom = 187.0

[node name="ContenedorMonedasBronce" parent="." instance=ExtResource( 5 )]
margin_left = 1122.0
margin_top = 183.0
margin_right = 1262.0
margin_bottom = 248.0

[node name="ContenedorMonedasOro" parent="." instance=ExtResource( 4 )]
margin_left = 1121.0
margin_top = 47.0
margin_right = 1261.0
margin_bottom = 112.0

[node name="ContenedorMonedasPlata" parent="." instance=ExtResource( 3 )]
margin_left = 1122.0
margin_top = 118.0
margin_right = 1262.0
margin_bottom = 176.0
